# e-pharmacy

./: .gitignore  .pre-commit-config.yaml  README.md  workflow.md
backend/: .gitignore  Dockerfile  Makefile  docker-compose.yml  functional_tests.py  pyproject.toml
backend/config/: __init__.py  regex_validators.py  settings.py  settings_test.py  structlog_signals.py  urls.py
backend/docs/: ARCHITECTURE.md
backend/docs/decisions/: ADR-001-tenant-isolation.md
backend/infrastructure/ansible/: deploy-playbook.yaml  inventory.ini.example
backend/infrastructure/terraform/: main.tf  outputs.tf  terraform.tf  terraform.tfvars.example  variables.tf
backend/products/: filters.py  models.py  permissions.py  serializers.py  urls.py  validators.py  views.py
backend/src/: functional_tests.py
backend/src/config/: asgi.py  settings.py  settings_test.py  wsgi.py
backend/src/products/: filters.py  models.py  validators.py  views.py
backend/src/tenants/: context.py  monitoring.py  validators.py
backend/src/tests/: models.py  urls.py  views.py
backend/src/users/: admin.py  managers.py
backend/src/utils/: regex_validators.py
backend/tenants/: admin.py  context.py  middleware.py  models.py  monitoring.py  permissions.py  serializers.py  services.py  tasks.py  tests.py  urls.py  validators.py  views.py
backend/tests/: conftest.py  models.py  urls.py  views.py
backend/tests/products/: conftest.py  test_api.py  test_images_api.py  test_models.py  test_tags_api.py
backend/tests/tenants/: test_api.py  test_context.py  test_integration.py  test_middleware.py  test_models.py  test_onboarding.py  test_permissions.py
backend/users/: admin.py  apps.py  backends.py  managers.py  models.py  permissions.py  serializers.py  signals.py  urls.py  views.py
(+32 files in other folders)
