[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14,<3.15"
dependencies = [
    "django>=5.2.1",
    "django-cors-headers>=4.9.0",
    "django-filter>=25.2",
    "django-health-check>=3.20.8",
    "django-structlog>=9.1.1",
    "djangorestframework>=3.16.1",
    "djangorestframework-simplejwt>=5.5.1",
    "djoser>=2.3.3",
    "drf-spectacular>=0.28.0",
    "gunicorn>=23.0.0",
    "pillow>=12.0.0",
    "uuid>=1.30",
    "whitenoise>=6.11.0",
]

[dependency-groups]
dev = [
    "ansible>=13.2.0",
    "factory-boy>=3.3.3",
    "faker>=38.2.0",
    "pre-commit>=4.2.0",
    "pytest-cov>=7.0.0",
    "pytest-django>=4.11.1",
]

[tool.pytest.ini_options]
pythonpath = "src"
DJANGO_SETTINGS_MODULE = "config.settings"
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "--strict-markers",
    "--strict-config",
    # "--cov=tenants",
    # "--cov-report=term-missing:skip-covered",
    # "--cov-report=html",
    # "--cov-fail-under=80",
    "-v"
]
testpaths = ["src/tests"]
markers = [
    "unit: Unit tests",
    "integration: Integration tests",
    "slow: Slow running tests"
]
